// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Environment checks > Zod > Metadata > meta() merge, not just overrides 1`] = `
{
  "description": "some",
  "examples": [
    "test",
  ],
  "title": "last",
}
`;

exports[`Environment checks > Zod > checks/refinements > Snapshot control ZodEmail definition 1`] = `
{
  "bag": {},
  "check": [Function],
  "constr": [Function],
  "def": {
    "abort": false,
    "check": "string_format",
    "format": "email",
    "pattern": /\\^\\(\\?:\\[A-Za-z0-9_'\\+\\\\-\\]\\+\\\\\\.\\)\\*\\[A-Za-z0-9_'\\+\\\\-\\]\\*\\[A-Za-z0-9_\\+-\\]@\\(\\?:\\[A-Za-z0-9\\]\\[A-Za-z0-9\\\\-\\]\\*\\\\\\.\\)\\+\\[A-Za-z\\]\\{2,\\}\\$/,
    "type": "string",
  },
  "onattach": [],
  "parse": [Function],
  "pattern": /\\^\\(\\?:\\[A-Za-z0-9_'\\+\\\\-\\]\\+\\\\\\.\\)\\*\\[A-Za-z0-9_'\\+\\\\-\\]\\*\\[A-Za-z0-9_\\+-\\]@\\(\\?:\\[A-Za-z0-9\\]\\[A-Za-z0-9\\\\-\\]\\*\\\\\\.\\)\\+\\[A-Za-z\\]\\{2,\\}\\$/,
  "processJSONSchema": [Function],
  "run": [Function],
  "traits": Set {
    "ZodEmail",
    "$ZodEmail",
    "$ZodStringFormat",
    "$ZodCheckStringFormat",
    "$ZodCheck",
    "$ZodString",
    "$ZodType",
    "ZodStringFormat",
    "_ZodString",
    "ZodType",
  },
}
`;

exports[`Environment checks > Zod > checks/refinements > Snapshot control ZodNumber definition 1`] = `
{
  "bag": {},
  "constr": [Function],
  "def": {
    "checks": [
      {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
        "maximum": 9007199254740991,
        "minimum": -9007199254740991,
        "type": "integer",
      },
    ],
    "type": "number",
  },
  "parent": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "type": "number",
  },
  "parse": [Function],
  "pattern": /\\^-\\?\\\\d\\+\\(\\?:\\\\\\.\\\\d\\+\\)\\?\\$/,
  "processJSONSchema": [Function],
  "run": [Function],
  "traits": Set {
    "ZodNumber",
    "$ZodNumber",
    "$ZodType",
    "ZodType",
  },
}
`;

exports[`Environment checks > Zod > checks/refinements > Snapshot control ZodNumberFormat definition 1`] = `
{
  "bag": {},
  "check": [Function],
  "constr": [Function],
  "def": {
    "abort": false,
    "check": "number_format",
    "format": "safeint",
    "type": "number",
  },
  "onattach": [],
  "parse": [Function],
  "pattern": /\\^-\\?\\\\d\\+\\(\\?:\\\\\\.\\\\d\\+\\)\\?\\$/,
  "processJSONSchema": [Function],
  "run": [Function],
  "traits": Set {
    "ZodNumberFormat",
    "$ZodNumberFormat",
    "$ZodCheckNumberFormat",
    "$ZodCheck",
    "$ZodNumber",
    "$ZodType",
    "ZodNumber",
    "ZodType",
  },
}
`;

exports[`Environment checks > Zod > checks/refinements > Snapshot control ZodNumberFormat definition 2`] = `
{
  "bag": {},
  "check": [Function],
  "constr": [Function],
  "def": {
    "abort": false,
    "check": "number_format",
    "format": "int32",
    "type": "number",
  },
  "onattach": [],
  "parse": [Function],
  "pattern": /\\^-\\?\\\\d\\+\\(\\?:\\\\\\.\\\\d\\+\\)\\?\\$/,
  "processJSONSchema": [Function],
  "run": [Function],
  "traits": Set {
    "ZodNumberFormat",
    "$ZodNumberFormat",
    "$ZodCheckNumberFormat",
    "$ZodCheck",
    "$ZodNumber",
    "$ZodType",
    "ZodNumber",
    "ZodType",
  },
}
`;

exports[`Environment checks > Zod > checks/refinements > Snapshot control ZodNumberFormat definition 3`] = `
{
  "bag": {},
  "check": [Function],
  "constr": [Function],
  "def": {
    "abort": false,
    "check": "number_format",
    "checks": [
      $ZodCheckLessThan {},
    ],
    "format": "safeint",
    "type": "number",
  },
  "onattach": [],
  "parent": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "maximum": 9007199254740991,
    "minimum": -9007199254740991,
    "type": "integer",
  },
  "parse": [Function],
  "pattern": /\\^-\\?\\\\d\\+\\(\\?:\\\\\\.\\\\d\\+\\)\\?\\$/,
  "processJSONSchema": [Function],
  "run": [Function],
  "traits": Set {
    "ZodNumberFormat",
    "$ZodNumberFormat",
    "$ZodCheckNumberFormat",
    "$ZodCheck",
    "$ZodNumber",
    "$ZodType",
    "ZodNumber",
    "ZodType",
  },
}
`;

exports[`Environment checks > Zod > checks/refinements > Snapshot control ZodString definition 1`] = `
{
  "bag": {},
  "constr": [Function],
  "def": {
    "checks": [
      {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
        "format": "email",
        "pattern": "^(?:[A-Za-z0-9_'+\\-]+\\.)*[A-Za-z0-9_'+\\-]*[A-Za-z0-9_+-]@(?:[A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$",
        "type": "string",
      },
    ],
    "type": "string",
  },
  "parent": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "type": "string",
  },
  "parse": [Function],
  "pattern": /\\^\\[\\\\s\\\\S\\]\\{0,\\}\\$/,
  "processJSONSchema": [Function],
  "run": [Function],
  "traits": Set {
    "ZodString",
    "$ZodString",
    "$ZodType",
    "_ZodString",
    "ZodType",
  },
}
`;

exports[`Environment checks > Zod > imperfections > circular object schema has no sign of getter in its shape 1`] = `
{
  "features": {
    "configurable": true,
    "enumerable": true,
    "value": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "items": {
        "additionalProperties": false,
        "properties": {
          "features": {
            "$ref": "#",
          },
          "name": {
            "type": "string",
          },
        },
        "required": [
          "name",
          "features",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "writable": true,
  },
  "name": {
    "configurable": true,
    "enumerable": true,
    "value": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "type": "string",
    },
    "writable": true,
  },
}
`;

exports[`Environment checks > Zod > imperfections > z.coerce and z.preprocess have no effect on JSON schema depiction 0 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "number",
}
`;

exports[`Environment checks > Zod > imperfections > z.coerce and z.preprocess have no effect on JSON schema depiction 1 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "number",
}
`;

exports[`Environment checks > Zod > input examples of transformations 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "examples": [
    "test",
  ],
  "type": "string",
}
`;

exports[`Environment checks > Zod > output examples of transformations 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "examples": [
    4,
  ],
}
`;
